--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'RNLNExample'
+include ':react-native-vector-icons'
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 include ':react-native-launch-navigator'
 project(':react-native-launch-navigator').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-launch-navigator/android')
 
