--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,7 +1,3 @@
 rootProject.name = 'RNLNExample'
-include ':react-native-vector-icons'
-project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
-include ':react-native-launch-navigator'
-project(':react-native-launch-navigator').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-launch-navigator/android')
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
