--- a/ios/RNLNExample/Info.plist
+++ b/ios/RNLNExample/Info.plist
@@ -75,5 +75,25 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>citymapper</string>
+        <string>comgooglemaps</string>
+        <string>navigon</string>
+        <string>transit</string>
+        <string>waze</string>
+        <string>yandexnavi</string>
+        <string>uber</string>
+        <string>tomtomhome</string>
+        <string>com.sygic.aura</string>
+        <string>here-route</string>
+        <string>moovit</string>
+        <string>lyft</string>
+        <string>mapsme</string>
+        <string>cabify</string>
+        <string>baidumap</string>
+        <string>taxis99</string>
+        <string>iosamap</string>
+    </array>
 </dict>
 </plist>
